Add missing api dependency to .travis.yml

--- a/.travis.yml
+++ b/.travis.yml
@@ -6,6 +6,7 @@ jdk:
 install:
   - git clone https://github.com/judgels/judgels.git ../judgels
   - git clone https://github.com/judgels/commons.git ../commons
+  - git clone https://github.com/judgels/api.git ../api
   - git clone https://github.com/judgels/play-commons.git ../play-commons
   - git clone https://github.com/judgels/sandalphon-commons.git ../sandalphon-commons
   - git clone https://github.com/judgels/gabriel-commons.git ../gabriel-commons
